@@ -79,16 +79,26 @@
           (define-key m (kbd "M-t") "other-in-frame")
           (define-key m (kbd "!") "exec")
           (define-key m (kbd "C-g") "abort")
-          (define-key m (kbd "0") "pull 0")
-          (define-key m (kbd "1") "pull 1")
-          (define-key m (kbd "2") "pull 2")
-          (define-key m (kbd "3") "pull 3")
-          (define-key m (kbd "4") "pull 4")
-          (define-key m (kbd "5") "pull 5")
-          (define-key m (kbd "6") "pull 6")
-          (define-key m (kbd "7") "pull 7")
-          (define-key m (kbd "8") "pull 8")
-          (define-key m (kbd "9") "pull 9")
+          (define-key m (kbd "0") "select-window-by-number 0")
+          (define-key m (kbd "1") "select-window-by-number 1")
+          (define-key m (kbd "2") "select-window-by-number 2")
+          (define-key m (kbd "3") "select-window-by-number 3")
+          (define-key m (kbd "4") "select-window-by-number 4")
+          (define-key m (kbd "5") "select-window-by-number 5")
+          (define-key m (kbd "6") "select-window-by-number 6")
+          (define-key m (kbd "7") "select-window-by-number 7")
+          (define-key m (kbd "8") "select-window-by-number 8")
+          (define-key m (kbd "9") "select-window-by-number 9")
+          (define-key m (kbd "C-0") "pull 0")
+          (define-key m (kbd "C-1") "pull 1")
+          (define-key m (kbd "C-2") "pull 2")
+          (define-key m (kbd "C-3") "pull 3")
+          (define-key m (kbd "C-4") "pull 4")
+          (define-key m (kbd "C-5") "pull 5")
+          (define-key m (kbd "C-6") "pull 6")
+          (define-key m (kbd "C-7") "pull 7")
+          (define-key m (kbd "C-8") "pull 8")
+          (define-key m (kbd "C-9") "pull 9")
           (define-key m (kbd "R") "remove")
           (define-key m (kbd "s") "vsplit")
           (define-key m (kbd "S") "hsplit")
